--- a/src/server/makefile
+++ b/src/server/makefile
@@ -1,4 +1,4 @@
 .PHONY: default
 
 default:
-	g++ Main.cpp Server.cpp Handler.cpp ./chessv2/game.cpp ./chessv2/move.cpp ./chessv2/piece.cpp ./chessv2/utilities.cpp -std=c++20
+	g++ Main.cpp Server.cpp Handler.cpp ./chessv2/game.cpp ./chessv2/move.cpp ./chessv2/piece.cpp ./chessv2/utilities.cpp
