--- a/src/client/makefile
+++ b/src/client/makefile
@@ -1,4 +1,4 @@
 .PHONY: default
 
 default:
-	g++ Main.cpp UIRenderer.cpp Client.cpp Handler.cpp
+	g++ Main.cpp UIRenderer.cpp Client.cpp Handler.cpp -lncursesw
